--- a/screen.html
+++ b/screen.html
@@ -13,7 +13,7 @@
 // Function to fetch the content of index.html and display it in the iframe
 async function loadMap() {
     try {
-        const response = await fetch('index.html');
+        const response = await fetch('https://rctesports.github.io/map/');
         const htmlContent = await response.text();
         
         // Display the content in the iframe
